--- a/style.css
+++ b/style.css
@@ -53,3 +53,44 @@ nav{
     margin-left: 10px;
     cursor: pointer;
 }
+
+#blog-container{
+    padding: 3rem 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.blog-card{
+    width: 280px;
+    border: 1px solid #2d5044;
+    border-radius: 10px;
+    padding: 1rem;
+    margin: 10px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.blog-card img{
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.blog-card:hover{
+    box-shadow: 4px 4px rgba(0, 0, 0, .1);
+}
+
+.blog-card h2{
+    color: #141414;
+    font-size: 1.7rem;
+    font-weight: 500;
+}
+
+.blog-card p{
+    font-size: 1.2rem;
+    padding-top: .7rem;
+}
