--- a/style.css
+++ b/style.css
@@ -94,3 +94,22 @@ nav{
     font-size: 1.2rem;
     padding-top: .7rem;
 }
+
+@media (max-width: 550px) {
+    nav{
+        padding: 0 20px;
+    }
+
+    .navbar .logo{
+        font-size: 1.8rem
+    }
+
+    #search-input{
+        width: 150px;
+        padding: 10px 10px;
+    }
+
+    .blog-card{
+        width: 100%;
+    }
+}
