--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ nav{
     border-radius: 5px;
     margin-left: 10px;
     cursor: pointer;
+    transition: .3s;
+}
+
+#search-button:hover{
+    background-color: #c57560;
 }
 
 #blog-container{
